--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
     "@storybook/react": "^6.2.9",
+    "@storybook/storybook-deployer": "^2.8.8",
     "@types/jest": "^26.0.23",
     "@xstate/inspect": "^0.4.1",
     "@xstate/react": "^1.3.4",
